--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 	</head>
 
 	<body>
+		<script>
+		
+		</script>
 		<div class="container">
 			<div class="container header">
 				<h3 class="text-center mt-5">Hapi JS</h3>
@@ -27,14 +30,15 @@
 								<label for="inputPassword">Password</label>
 								<input type="password" class="form-control" id="inputPassword" placeholder="Password">
 							</div>
-							<button id="signupButton" class="btn btn-primary">Submit</button>
+							<button onclick="makeSignupRequest(); return false;" id="signupButton" class="btn btn-primary">Submit</button>
 						</form>
 			</div>
 
 		</div>
-
+		<script src="public/index.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+		</script>
 	</body>
 </html>
